# mere

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  RUNBOOK.md  dune-project  mandel_p6.ppm  mere.opam
.github/workflows/: ci.yml  release.yml
contrib/: README.md
contrib/argparse/: README.md  argparse.mere
contrib/auth/: jwt.mere
contrib/codegen/: README.md  codegen_wasm.mere
contrib/csv/: README.md  parser.mere  writer.mere
contrib/db/: mysql.mere  mysql_pool.mere  pg.mere  pg_pool.mere  (+9 more)
docs/: changelog.md  codegen.md  db.md  http-demos.md  language-reference.md  memory-model.md  packages.md  patterns.md  stdlib-reference.md  tour.md  tutorial-redis-client.md  tutorial-rest-api.md  tutorial-type-inference.md  tutorial.md
examples/: README.md  aligned_table.mere  anagram.mere  argparse_demo.mere  arith_eval.mere  bank_account.mere  base64.mere  base_conv.mere  bignum_factorial.mere  bin_tree_traversal.mere  borrow_chain.mere  borrow_conflict.lang  borrow_conflict.mere  borrow_modes.lang  borrow_modes.mere  borrow_modes_typeerror.lang  borrow_modes_typeerror.mere  brackets_balance.mere  bst.mere  cache_sim.mere  caesar_cipher.mere  calc.mere  calendar_lite.mere  cap_handler.mere  chained_parse.mere  collatz.mere  comprehension.mere  concurrent_loops.mere  config_loader.mere  cons_pipe_demo.mere  crc32.mere  csv_parser.mere  csv_summary.mere  csv_writer.mere  csv_writer_demo.mere  date_arith.mere  db_copy.mere  db_copy_out.mere  db_hello.mere  db_mysql.mere  (+233 more)
lib/: ast.ml  codegen_c.ml  codegen_llvm.ml  codegen_wasm.ml  diagnostic.ml  dune  eval.ml  exhaustive.ml  formatter.ml  lexer.ml  loc.ml  move_check.ml  parser.ml  pipeline.ml  pkg_install.ml  prelude_stdlib.ml  repl.ml  typer.ml  version.ml
scripts/: http_fetch_env.js  install.sh  pg_env.js  run_http_server.js  run_wasm.js  selfhost_check.sh  sse_redis_bridge.js  subprocess_env.js  tcp_worker.js  ws_env.js
test/: dune  test_basic.ml
test/selfhost/: t01_hello.mere  t02_arith.mere  t03_fib.mere  t04_string.mere  t05_list.mere
(+145 files in other folders)
